--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: run blackout.py
 
 on:
-  # schedule:
-  #   - cron: "*/15 7-23 * * *" # Every 15 min past hours 7-23
-  workflow_dispatch # manually
+  schedule:
+    - cron: "*/20 7-23 * * *" # Every 20 min past hours 7-23
+  # workflow_dispatch # manually
 
 jobs:
   build:
