--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: run blackout.py
 
 on:
-  schedule:
-    - cron: "5,35 5-22 * * *" # Every 20 min past hours 5-22 UTC
-  #workflow_dispatch # manually
+  #schedule:
+  #  - cron: "5,35 5-22 * * *" # Every X min past hours 5-22 UTC
+  workflow_dispatch # manually
 
 jobs:
   run-script:
@@ -46,6 +46,10 @@ jobs:
           git config --local user.name "GitHub Action [bot]"
           git add -A
           git diff-index --quiet HEAD || git commit -m "Updated schedule.json" --allow-empty
+
+      - name: Pull Latest Changes for Bot-Updates
+        run: |
+          git pull origin bot-updates --rebase
 
       - name: Push Changes to Bot-Updates
         uses: ad-m/github-push-action@master
