--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,12 +1,12 @@
 name: run blackout.py
 
 on:
-  schedule:
-    - cron: "*/20 5-22 * * *" # Every 20 min past hours 5-22 UTC
-  # workflow_dispatch # manually
+  #schedule:
+  #  - cron: "*/20 5-22 * * *" # Every X min past hours 5-22 UTC
+  workflow_dispatch # manually
 
 jobs:
-  build:
+  run-script:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo
